2004-08-01  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cnxml.xds: 

	Fixed the DTD location, thanks to Michèle Garoche

2004-07-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* xds.dtd, xhtml1-strict.xds.in:

	Added <typical-prefix> element

2004-07-16  David Malcolm  <david@davemalcolm.demon.co.uk>

	* relax-ng.xds, xds.dtd, xhtml1-strict.xds.in, xsl.xds: 

	Moved the nsURI attribute from <element> to <element-list>

2004-07-15  Jeff Martin  <jeff@custtommonkey.org>

	* xds.dtd: Added spellcheck attribute, corrected case for nsURI was 
	incorrectly set to nsUri and changed type to CDATA to allow non
	alpha numeric characters

2004-07-06  David Malcolm  <david@davemalcolm.demon.co.uk>

	* docbook.xds.in: Added spellcheck attributes

2004-06-22  David Malcolm  <david@davemalcolm.demon.co.uk>

	* docbook.xds.in: Added envar, based on bug 144739, thanks to Lars Trieloff

2004-06-13  David Malcolm  <david@davemalcolm.demon.co.uk>

	* release.xds: Added <header-info> for <translations> and <translation> elements

2004-06-08  David Malcolm  <dmalcolm@redhat.com>

	* opml.xds: Commented out <external-document-model> element

	* Makefile.am (%.xds): Applied fix for bug 143937 by 
	nshmyrev@yandex.ru (Nickolay V. Shmyrev)
	
2004-06-05  David Malcolm  <david@davemalcolm.demon.co.uk>

	* release.dtd: Added <translations> and <translation> elements

	* release.xds: ditto

2004-05-17 Geert Stappers  <stappers@stappers.nl>

	* dispspec-template.xds: moved to ../templates.

	* Makefile.am: removed that template file from the shipping list.

2004-05-05  Geert Stappers <stappers@stappers.nl>

	* opml.xds

	Replaced < > inside a tag by ' ' to get it valid.

2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* relax-ng.xds

	Renamed <grammar> element; fixed title of <attribute> element.

2004-03-04  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Include opml.xds in the project

2004-03-04  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* opml.xds
